[FIX] Fixed z-index issues for graph.

--- a/openerp/static/css/style.css
+++ b/openerp/static/css/style.css
@@ -504,6 +504,10 @@ div .chart_resize {
     overflow:hidden;    
 }
 
+div.graph-block {
+	z-index: 100;
+}
+
 /* ------------- End side bar ------- */
 
 /**
